<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="all_notes">All Notes</string>
    <string name="work">Work</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome!</string>
    <string name="lets_get_to_know_each_other">Let\'s get to know\neach other.</string>
    <string name="whats_your_name">What\'s your name?</string>
    <string name="done">Done</string>
    <string name="title">Title</string>
    <string name="type_here">Type here…</string>
    <string name="discard">Discard</string>
    <string name="category">Category</string>
</resources>