<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".presentation.welcome.WelcomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="45sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/alata"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/lets_get_to_know_each_other"
        android:textColor="@color/white"
        android:textSize="25sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textColorHint="@color/light_grey"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/dark_grey"
            android:fontFamily="@font/alata"
            android:gravity="center"
            android:hint="@string/whats_your_name"
            android:textColor="@color/white"
            tools:text="Bachana" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/alata"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        app:cornerRadius="20dp"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

</androidx.appcompat.widget.LinearLayoutCompat>